@@ -1,5 +1,6 @@
 Version 2.03.34 - 
 ==================
+  Fix lvresize corruption in LV->crypt->FS stack if near crypt min size limit.
   Fix autoactivation on top of loop dev PVs to trigger once for change uevents.
 
 Version 2.03.33 - 27th June 2025
